# household-services

./: .env  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  api_documentation.yml  backend.txt  celery_diagnostic.py  celerybeat-schedule.dir  pyproject.toml  repomix.config.json  repopack.config.json  requirements.txt
backend/: requirements.txt
backend/application/: __init__.py  config.py  database.py  models.py
backend/application/api/: song_resource.py
frontend/: .gitignore  eslint.config.js  frontend.txt  index.html  package-lock.json  package.json  repomix.config.json  repopack.config.json  vite.config.js  vite.config.ts
frontend/public/: index.html
frontend/src/: App.vue  main.js  main.ts
frontend/src/assets/: actionTypes.js  requestStatuses.js  styles.scss
frontend/src/components/: LoginForm.vue  TheWelcome.vue
frontend/src/components/auth/: CustomerRegisterForm.vue  LoginForm.vue  ProfessionalRegisterForm.vue
frontend/src/components/layout/: NotificationsList.vue  TheNavbar.vue
frontend/src/components/profile/: AccountDeleteForm.vue  ActivityLogs.vue  DocumentManagement.vue  PasswordChangeForm.vue  ProfileEditForm.vue  ProfileInfo.vue
frontend/src/components/shared/: ConfirmDialog.vue  FormNavigationGuard.vue  Loading.vue  Toast.vue
frontend/src/composables/: useLoading.js  useProfessionalProfile.js  useProfileManagement.js
frontend/src/core/: useLoading.js
frontend/src/layouts/: BaseLayout.vue
frontend/src/mixins/: formHandling.js  formNavigation.js
frontend/src/router/: guards.js  index.js
frontend/src/router/routes/: admin.js  customer.js  error.js  professional.js  public.js
frontend/src/services/: api.js  auth.service.js  cachedApi.js  customer.service.js  export.service.js  index.js  professional.service.js  profile.services.js  public.service.js  request.service.js  service.service.js  stats.service.js
frontend/src/store/: index.js
frontend/src/store/modules/: apiCache.js  auth.js  customers.js  exports.js  professionals.js  profile.js  requests.js  services.js  stats.js
frontend/src/utils/: date.js
frontend/src/utils/validation/: profile.js
frontend/src/views/: Login.vue  NotFound.vue  Register.vue
frontend/src/views/admin/: AdminProfessionalManagement.vue  AdminServiceManagement.vue  Customers.vue  Dashboard.vue  Professionals.vue  Profile.vue  Reports.vue  Requests.vue  Services.vue
frontend/src/views/customer/: Dashboard.vue  Payment.vue  Professionals.vue  Profile.vue  Requests.vue  ServiceBrowser.vue  ServiceRequests.vue  ServiceSearch.vue  Services.vue
frontend/src/views/professional/: Dashboard.vue  ProfessionalDashboard.vue  Profile.vue  Requests.vue  Schedule.vue  (+2 more)
instance/: household_services.db
src/: __init__.py  app.py  celery_app.py  celeryconfig.py  constants.py  database.py  models.py  schemas.py  setup_db.py  tasks.py  utils.py
src/api/: album_resource.py  api.py  schemas.py  user_resource.py
src/routes/: admin.py  auth.py  contact.py  customer.py  dashboard.py  export.py  professional.py  request.py  service.py  user.py
src/schemas/: __init__.py  admin.py  auth.py  base.py  contact.py  customer.py  dashboard.py  error.py  export.py  professional.py  request.py  service.py  user.py
src/static/exports/: service_requests_1_20241129_194212.csv  service_requests_20241129_203855.csv  service_requests_20241129_204532.csv  service_requests_20241129_212403.csv  service_requests_3_20241129_201636.csv
src/utils/: api.py  auth.py  cache.py  file.py  notification.py  request.py  user.py
templates/emails/: account_unblocked.html  contact_form.html  daily_reminder.html  export_complete.html  monthly_report.html  service_request_assigned.html  service_request_created.html  verification_approved.html  verification_rejected.html
(+18 files in other folders)
